--- a/option api/products.html
+++ b/option api/products.html
@@ -58,10 +58,12 @@
                         </td>
                         <td>
                             <div class="btn-group">
-                                <button type="button" class="btn btn-outline-primary btn-sm" @click="openModal('edit',product)">
+                                <button type="button" class="btn btn-outline-primary btn-sm"
+                                    @click="openModal('edit',product)">
                                     編輯
                                 </button>
-                                <button type="button" class="btn btn-outline-danger btn-sm" @click="openModal('delete',product)">
+                                <button type="button" class="btn btn-outline-danger btn-sm"
+                                    @click="openModal('delete',product)">
                                     刪除
                                 </button>
                             </div>
@@ -70,46 +72,40 @@
                 </tbody>
             </table>
             <!-- 分頁元件 -->
-            <pagination :pages="pagination"></pagination>
+            <!-- <pagination :pages="pagination"></pagination> -->
         </div>
         <nav aria-label="Page navigation example">
             <ul class="pagination">
-              <li
-                class="page-item"
-              >
-                <a
-                  class="page-link"
-                  href="#"
-                  aria-label="Previous"
+                <!-- 如果判斷在第一頁的話就顯示disabled樣式，禁止點上一頁按鈕 -->
+                <li class="page-item" 
+                :class="{disabled:pagination.current_page === 1}"
                 >
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li
+                <!-- 取得上一頁的資料 -->
+                    <a class="page-link" href="#" aria-label="Previous"
+                    @click.prevent = "getProducts(pagination.current_page - 1)">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <!-- 判斷item是否與當前頁面相同 (目前頁面)取得當前頁面的資料-->
+                <li class="page-item" 
+                v-for="(item,index) in pagination.total_pages"
                 :key="index"
-                class="page-item"
-              >
-                <span
-                  class="page-link"
-                ></span>
-                <a
-                  class="page-link"
-                  href="#"
-                ></a>
-              </li>
-              <li
-                class="page-item"
-              >
-                <a
-                  class="page-link"
-                  href="#"
-                  aria-label="Next"
-                >
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
+                :class="{'active': item === pagination.current_page}">
+                    <a class="page-link" href="#"
+                    @click.prevent = "getProducts(item)">
+                        {{item}}
+                    </a>
+                </li>
+                <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+                <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next"
+                    @click.prevent = "getProducts(pagination.current_page + 1)">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
             </ul>
-          </nav>
+        </nav>
         <!-- Modal -->
         <div id="productModal" ref="productModal" class="modal fade" tabindex="-1" aria-labelledby="productModalLabel"
             aria-hidden="true">
@@ -128,7 +124,8 @@
                                 <div class="mb-2">
                                     <div class="mb-3">
                                         <label for="imageUrl" class="form-label">輸入圖片網址</label>
-                                        <input type="text" class="form-control mb-2" placeholder="請輸入圖片連結" id="imageUrl" v-model="tempProduct.imageUrl">
+                                        <input type="text" class="form-control mb-2" placeholder="請輸入圖片連結" id="imageUrl"
+                                            v-model="tempProduct.imageUrl">
                                     </div>
                                     <img class="img-fluid" :src="tempProduct.imageUrl" alt="">
                                 </div>
@@ -138,26 +135,28 @@
                                     <div class="mb-1" v-for="(image,key) in tempProduct.imagesUrl" :key="key">
                                         <div class="mb-3">
                                             <label :for="`imagesUrl${key}`" class="form-label"></label>
-                                            <input :id="`imagesUrl${key}`" v-model="tempProduct.imagesUrl[key]" type="text" class="form-control" placeholder="請輸入圖片連結">
+                                            <input :id="`imagesUrl${key}`" v-model="tempProduct.imagesUrl[key]"
+                                                type="text" class="form-control" placeholder="請輸入圖片連結">
                                         </div>
                                         <img class="img-fluid" :src="image" alt="">
                                     </div>
                                 </div>
-                                <div v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]">
-                                    <button class="btn btn-outline-primary btn-sm d-block w-100" @click="tempProduct.imagesUrl.push('')">
+                                <div
+                                    v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]">
+                                    <button class="btn btn-outline-primary btn-sm d-block w-100"
+                                        @click="tempProduct.imagesUrl.push('')">
                                         新增圖片
                                     </button>
                                 </div>
                                 <!-- <div v-else> -->
                                 <div v-else>
                                     <button class="btn btn-outline-danger btn-sm d-block w-100"
-                                    @click="tempProduct.imagesUrl.pop()">
+                                        @click="tempProduct.imagesUrl.pop()">
                                         刪除圖片
                                     </button>
                                 </div>
                                 <div v-else>
-                                    <button class="btn btn-outline-danger btn-sm d-block w-100"
-                                    @click="createImages">
+                                    <button class="btn btn-outline-danger btn-sm d-block w-100" @click="createImages">
                                         新增圖片
                                     </button>
                                 </div>
@@ -165,17 +164,20 @@
                             <div class="col-sm-8">
                                 <div class="mb-3">
                                     <label for="title" class="form-label">標題</label>
-                                    <input id="title" type="text" class="form-control" placeholder="請輸入標題" v-model="tempProduct.title">
+                                    <input id="title" type="text" class="form-control" placeholder="請輸入標題"
+                                        v-model="tempProduct.title">
                                 </div>
 
                                 <div class="row">
                                     <div class="mb-3 col-md-6">
                                         <label for="category" class="form-label">分類</label>
-                                        <input id="category" type="text" class="form-control" placeholder="請輸入分類" v-model="tempProduct.category">
+                                        <input id="category" type="text" class="form-control" placeholder="請輸入分類"
+                                            v-model="tempProduct.category">
                                     </div>
                                     <div class="mb-3 col-md-6">
                                         <label for="price" class="form-label">單位</label>
-                                        <input id="unit" type="text" class="form-control" placeholder="請輸入單位" v-model="tempProduct.unit">
+                                        <input id="unit" type="text" class="form-control" placeholder="請輸入單位"
+                                            v-model="tempProduct.unit">
                                     </div>
                                 </div>
 
@@ -187,28 +189,28 @@
                                     </div>
                                     <div class="mb-3 col-md-6">
                                         <label for="price" class="form-label">售價</label>
-                                        <input id="price" type="number" min="0" class="form-control"
-                                            placeholder="請輸入售價" v-model="tempProduct.price">
+                                        <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價"
+                                            v-model="tempProduct.price">
                                     </div>
                                 </div>
                                 <hr>
 
                                 <div class="mb-3">
                                     <label for="description" class="form-label">產品描述</label>
-                                    <textarea id="description" type="text" class="form-control" placeholder="請輸入產品描述" v-model="tempProduct.description">
+                                    <textarea id="description" type="text" class="form-control" placeholder="請輸入產品描述"
+                                        v-model="tempProduct.description">
                       </textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="content" class="form-label">說明內容</label>
                                     <textarea id="description" type="text" class="form-control" placeholder="請輸入說明內容"
-                                    v-model="tempProduct.content">
+                                        v-model="tempProduct.content">
                       </textarea>
                                 </div>
                                 <div class="mb-3">
                                     <div class="form-check">
-                                        <input id="is_enabled" 
-                                        v-model="tempProduct.is_enabled"class="form-check-input" type="checkbox" :true-value="1"
-                                            :false-value="0">
+                                        <input id="is_enabled" v-model="tempProduct.is_enabled" class="form-check-input"
+                                            type="checkbox" :true-value="1" :false-value="0">
                                         <label class="form-check-label" for="is_enabled">是否啟用</label>
                                     </div>
                                 </div>
@@ -219,8 +221,7 @@
                         <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                             取消
                         </button>
-                        <button type="button" class="btn btn-primary"
-                        @click="updateProduct">
+                        <button type="button" class="btn btn-primary" @click="updateProduct">
                             確認
                         </button>
                     </div>
@@ -245,8 +246,7 @@
                         <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                             取消
                         </button>
-                        <button type="button" class="btn btn-danger"
-                        @click="delProduct">
+                        <button type="button" class="btn btn-danger" @click="delProduct">
                             確認刪除
                         </button>
                     </div>
