--- a/option api/products.html
+++ b/option api/products.html
@@ -75,7 +75,8 @@
         <!-- 分頁元件 -->
         <pagination-component :pages="pagination" @change-page="getProducts"></pagination-component>
         <!-- Modal -->
-        <div id="productModal" ref="productModal" class="modal fade" tabindex="-1" aria-labelledby="productModalLabel"
+        <productModalComponent :product="tempProduct" :getProducts="getProducts" :url="url" :path="path" :productModal="productModal" :imagesUrl="imagesUrl"></productModalComponent>
+        <!-- <div id="productModal" ref="productModal" class="modal fade" tabindex="-1" aria-labelledby="productModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content border-0">
@@ -98,7 +99,6 @@
                                     <img class="img-fluid" :src="tempProduct.imageUrl" alt="">
                                 </div>
                                 <h3 class="mb-3">多圖新增</h3>
-                                <!-- 檢查是否為陣列 -->
                                 <div v-if="Array.isArray(tempProduct.imagesUrl)">
                                     <div class="mb-1" v-for="(image,key) in tempProduct.imagesUrl" :key="key">
                                         <div class="mb-3">
@@ -116,7 +116,6 @@
                                         新增圖片
                                     </button>
                                 </div>
-                                <!-- <div v-else> -->
                                 <div v-else>
                                     <button class="btn btn-outline-danger btn-sm d-block w-100"
                                         @click="tempProduct.imagesUrl.pop()">
@@ -195,7 +194,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div id="delProductModal" ref="delProductModal" class="modal fade" tabindex="-1"
             aria-labelledby="delProductModalLabel" aria-hidden="true">
             <div class="modal-dialog">
