--- a/option api/products.html
+++ b/option api/products.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <script type="importmap">
+    <!-- <script type="importmap">
         {
           "imports": {
             "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
           }
         }
-      </script>
+      </script> -->
     <div id="app">
         <div class="container">
             <div class="text-end mt-4">
