--- a/compositionapi/products.html
+++ b/compositionapi/products.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <script type="importmap">
+    <!-- <script type="importmap">
         {
           "imports": {
             "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
           }
         }
-      </script>
+      </script> -->
     <div id="app">
         <div class="container">
             <div class="text-end mt-4">
@@ -75,6 +75,7 @@
         <!-- 分頁元件 -->
         <pagination-component :pages="pagination" :get-products="getProducts"></pagination-component>
         <!-- Modal -->
+        <!--composition api 需要將ref變成動態 :ref-->
         <product-modal-component :is-new="isNew" :temp-product="tempProduct" :update-product="updateProduct" ref="pModal"></product-modal-component>
         <delete-modal-component :del-product="delProduct" ref="dModal"></delete-modal-component>
         
